# localtwin-build-week

./: .gitattributes  .gitignore  .prettierignore  LICENSE  README.md
.harness/: README.md
product/apps/api/: pyproject.toml
product/apps/api/alembic/: env.py
product/apps/api/alembic/versions/: 20260715_0001_create_canonical_schema.py  20260716_0002_add_market_spatial_links.py  20260716_0003_add_store_coordinate_index.py  20260716_0004_add_store_reverse_coordinate_index.py  20260716_0005_add_admin_area_population.py  20260716_0006_add_admin_area_business_metrics.py  20260716_0007_add_market_population_metrics.py
product/apps/api/src/localtwin_api/: __init__.py  admin_area_analysis.py  bulk_import.py  canonical_db.py  config.py  database.py  db_models.py  kosis_business_census.py  kosis_population.py  main.py  market_analysis.py  market_population_import.py  market_score.py  market_search.py  nearby_search.py  postgres_seed.py  product_catalog.py  production_promotion.py  public_data.py  repositories.py  scene_pipeline.py  seoul_open_data.py  spatial_import.py
product/apps/api/tests/: test_admin_area_analysis.py  test_bulk_import.py  test_canonical_db.py  test_config.py  test_database.py  test_health.py  test_kosis_business_census.py  test_kosis_population.py  test_market_analysis.py  test_market_population_import.py  test_market_score.py  test_market_search.py  test_nearby_search.py  test_postgres_seed.py  test_product_catalog.py  test_production_promotion.py  test_public_data.py  test_scene_pipeline.py  test_seoul_open_data.py  test_spatial_import.py
(+298 files in other folders)
