[project]
name = "localtwin-api"
version = "0.1.0"
description = "LocalTwin FastAPI service"
requires-python = ">=3.13.9"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyproj>=3.7.2",
    "pyshp>=2.3.1",
    "python-multipart>=0.0.20",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
